--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/pubsub": "^2.1.1",
+    "@aws-amplify/analytics": "^2.2.8",
+    "@aws-amplify/api": "^2.2.1",
+    "@aws-amplify/auth": "^2.1.8",
+    "@aws-amplify/core": "^3.2.1",
+    "@aws-amplify/pubsub": "^2.1.9",
+    "@aws-amplify/storage": "^2.2.3",
+    "@aws-amplify/xr": "^1.1.5",
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
+    "@react-native-community/netinfo": "^5.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -20,7 +27,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
+    "react-app-rewired": "^2.1.5"
   }
 }
