--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "react-app-rewired": "^2.1.5"
   }
 }
