--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "@aws-amplify/pubsub": "^2.1.9",
     "@aws-amplify/storage": "^2.2.3",
     "@aws-amplify/xr": "^1.1.5",
-    "@material-ui/core": "^4.9.8",
+    "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
     "@react-native-community/netinfo": "^5.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -23,9 +24,12 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-transition-group": "^4.3.0"
+    "react-transition-group": "^4.3.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
