--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-amplify-react": "^4.1.3",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
+    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
