--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-components": "^3.1.5",
-    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/client": "^3.0.0-rc.6",
+    "@apollo/react-components": "^4.0.0-beta.1",
     "@aws-amplify/analytics": "^2.2.8",
     "@aws-amplify/api": "^2.2.1",
     "@aws-amplify/auth": "^2.1.8",
@@ -19,7 +19,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "apollo-boost": "^0.4.9",
     "aws-amplify": "^3.0.3",
     "aws-amplify-react": "^4.1.3",
     "axios": "^0.19.2",
@@ -29,11 +28,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-transition-group": "^4.3.0",
-    "redux-devtools-extension": "^2.13.8"
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
