--- a/package.json
+++ b/package.json
@@ -3,25 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/analytics": "^2.2.8",
-    "@aws-amplify/api": "^2.2.1",
-    "@aws-amplify/auth": "^2.1.8",
-    "@aws-amplify/core": "^3.2.1",
-    "@aws-amplify/pubsub": "^2.1.9",
-    "@aws-amplify/storage": "^2.2.3",
-    "@aws-amplify/xr": "^1.1.5",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.49",
-    "@react-native-community/netinfo": "^5.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "aws-amplify": "^3.0.3",
+    "aws-amplify": "^3.0.23",
     "aws-amplify-react": "^4.1.3",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.27.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -58,6 +51,7 @@
     "customize-cra": "^0.9.1",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "react-app-rewired": "^2.1.5"
   }
 }
