--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.4",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "aws-amplify": "^3.0.23",
     "aws-amplify-react": "^4.1.3",
     "axios": "^0.19.2",
@@ -20,10 +26,12 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-router-guards": "^1.0.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -52,6 +60,8 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewire-alias": "^0.1.6",
+    "react-app-rewired": "^2.1.6",
+    "tsconfig-paths": "^3.9.0"
   }
 }
