--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "aws-amplify": "^3.0.23",
     "aws-amplify-react": "^4.1.3",
     "axios": "^0.19.2",
+    "clsx": "^1.1.1",
     "formik": "^2.1.4",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.27.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-router-guards": "^1.0.2",
