--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "aws-amplify-react": "^4.1.3",
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "formik": "^2.1.4",
     "immutable": "^4.0.0-rc.12",
-    "moment": "^2.27.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
