added constate and update some structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     ],
     "react/no-array-index-key": "off",
     "@typescript-eslint/explicit-module-boundary-types": ["off"],
-    "no-underscore-dangle": ["off"]
+    "no-underscore-dangle": ["off"],
+    "react/jsx-props-no-spreading": ["off"]
   }
 }
