--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aws-amplify-react": "^4.1.3",
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
+    "constate": "^3.1.0",
     "date-fns": "^2.16.1",
     "formik": "^2.1.4",
     "immutable": "^4.0.0-rc.12",
