--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,7 +7,8 @@
       "@components/*": ["./src/components/*"],
       "@containers/*": ["./src/containers/*"],
       "@models/*": ["./src/models/*"],
-      "@reducers/*": ["./src/reducers/*"]
+      "@reducers/*": ["./src/reducers/*"],
+      "@providers/*": ["./src/providers/*"]
     }
   }
 }
