--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "aws-amplify": "^3.0.23",
     "aws-amplify-react": "^4.1.3",
@@ -21,25 +20,19 @@
     "clsx": "^1.1.1",
     "constate": "^3.1.0",
     "date-fns": "^2.16.1",
-    "formik": "^2.1.4",
-    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.0",
-    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-router-guards": "^1.0.2",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3",
     "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
